# final-project-efficiency

./: CMakeLists.txt  NewSession1.nvvp  README.md  custom_types.cpp  dct8x8_block.cpp  main.cu  ppe
